// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Track fires click 1`] = `
{
  "angle": 90,
  "direction": "right",
  "event": MouseEvent {
    "isTrusted": false,
  },
  "id": "id-0",
  "model": StraightTileModel {
    "direction": "right",
    "id": "id-0",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "ratio": 1,
  "rect": {
    "height": 90,
    "input": {
      "angle": 90,
      "x": 0,
      "y": 0,
    },
    "output": {
      "angle": 90,
      "x": -110,
      "y": 6.735557395310443e-15,
    },
    "width": 110,
    "x": -110,
    "y": -45,
  },
  "type": "straight-tile",
  "x": 0,
  "y": 0,
}
`;

exports[`Track fires click 2`] = `
{
  "angle": 90,
  "direction": "right",
  "event": MouseEvent {
    "isTrusted": false,
  },
  "id": "id-1",
  "model": CurvedTileModel {
    "direction": "right",
    "id": "id-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "ratio": 1,
  "rect": {
    "height": 100,
    "input": {
      "angle": 90,
      "x": -110,
      "y": 6.735557395310443e-15,
    },
    "output": {
      "angle": 180,
      "x": -165,
      "y": -54.99999999999999,
    },
    "width": 100,
    "x": -210,
    "y": -54.99999999999999,
  },
  "type": "curved-tile",
  "x": -110,
  "y": 6.735557395310443e-15,
}
`;

exports[`Track fires click 3`] = `
{
  "angle": 180,
  "direction": "right",
  "event": MouseEvent {
    "isTrusted": false,
  },
  "id": "id-2",
  "model": CurvedTileEnlargedModel {
    "direction": "right",
    "id": "id-2",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "ratio": 1,
  "rect": {
    "height": 100.00000000000001,
    "input": {
      "angle": 180,
      "x": -165,
      "y": -54.99999999999999,
    },
    "output": {
      "angle": 270,
      "x": -110,
      "y": -110,
    },
    "width": 100,
    "x": -210,
    "y": -155,
  },
  "type": "curved-tile-enlarged",
  "x": -165,
  "y": -54.99999999999999,
}
`;

exports[`Track fires keypress 1`] = `
{
  "angle": 90,
  "direction": "right",
  "event": KeyboardEvent {
    "isTrusted": false,
  },
  "id": "id-0",
  "model": StraightTileModel {
    "direction": "right",
    "id": "id-0",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "ratio": 1,
  "rect": {
    "height": 90,
    "input": {
      "angle": 90,
      "x": 0,
      "y": 0,
    },
    "output": {
      "angle": 90,
      "x": -110,
      "y": 6.735557395310443e-15,
    },
    "width": 110,
    "x": -110,
    "y": -45,
  },
  "type": "straight-tile",
  "x": 0,
  "y": 0,
}
`;

exports[`Track fires keypress 2`] = `
{
  "angle": 90,
  "direction": "right",
  "event": KeyboardEvent {
    "isTrusted": false,
  },
  "id": "id-1",
  "model": CurvedTileModel {
    "direction": "right",
    "id": "id-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "ratio": 1,
  "rect": {
    "height": 100,
    "input": {
      "angle": 90,
      "x": -110,
      "y": 6.735557395310443e-15,
    },
    "output": {
      "angle": 180,
      "x": -165,
      "y": -54.99999999999999,
    },
    "width": 100,
    "x": -210,
    "y": -54.99999999999999,
  },
  "type": "curved-tile",
  "x": -110,
  "y": 6.735557395310443e-15,
}
`;

exports[`Track fires keypress 3`] = `
{
  "angle": 180,
  "direction": "right",
  "event": KeyboardEvent {
    "isTrusted": false,
  },
  "id": "id-2",
  "model": CurvedTileEnlargedModel {
    "direction": "right",
    "id": "id-2",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "ratio": 1,
  "rect": {
    "height": 100.00000000000001,
    "input": {
      "angle": 180,
      "x": -165,
      "y": -54.99999999999999,
    },
    "output": {
      "angle": 270,
      "x": -110,
      "y": -110,
    },
    "width": 100,
    "x": -210,
    "y": -155,
  },
  "type": "curved-tile-enlarged",
  "x": -165,
  "y": -54.99999999999999,
}
`;

exports[`Track fires mouseenter 1`] = `
{
  "angle": 90,
  "direction": "right",
  "event": MouseEvent {
    "isTrusted": false,
  },
  "id": "id-0",
  "model": StraightTileModel {
    "direction": "right",
    "id": "id-0",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "ratio": 1,
  "rect": {
    "height": 90,
    "input": {
      "angle": 90,
      "x": 0,
      "y": 0,
    },
    "output": {
      "angle": 90,
      "x": -110,
      "y": 6.735557395310443e-15,
    },
    "width": 110,
    "x": -110,
    "y": -45,
  },
  "type": "straight-tile",
  "x": 0,
  "y": 0,
}
`;

exports[`Track fires mouseenter 2`] = `
{
  "angle": 90,
  "direction": "right",
  "event": MouseEvent {
    "isTrusted": false,
  },
  "id": "id-1",
  "model": CurvedTileModel {
    "direction": "right",
    "id": "id-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "ratio": 1,
  "rect": {
    "height": 100,
    "input": {
      "angle": 90,
      "x": -110,
      "y": 6.735557395310443e-15,
    },
    "output": {
      "angle": 180,
      "x": -165,
      "y": -54.99999999999999,
    },
    "width": 100,
    "x": -210,
    "y": -54.99999999999999,
  },
  "type": "curved-tile",
  "x": -110,
  "y": 6.735557395310443e-15,
}
`;

exports[`Track fires mouseenter 3`] = `
{
  "angle": 180,
  "direction": "right",
  "event": MouseEvent {
    "isTrusted": false,
  },
  "id": "id-2",
  "model": CurvedTileEnlargedModel {
    "direction": "right",
    "id": "id-2",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "ratio": 1,
  "rect": {
    "height": 100.00000000000001,
    "input": {
      "angle": 180,
      "x": -165,
      "y": -54.99999999999999,
    },
    "output": {
      "angle": 270,
      "x": -110,
      "y": -110,
    },
    "width": 100,
    "x": -210,
    "y": -155,
  },
  "type": "curved-tile-enlarged",
  "x": -165,
  "y": -54.99999999999999,
}
`;

exports[`Track fires mouseleave 1`] = `
{
  "angle": 90,
  "direction": "right",
  "event": MouseEvent {
    "isTrusted": false,
  },
  "id": "id-0",
  "model": StraightTileModel {
    "direction": "right",
    "id": "id-0",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "ratio": 1,
  "rect": {
    "height": 90,
    "input": {
      "angle": 90,
      "x": 0,
      "y": 0,
    },
    "output": {
      "angle": 90,
      "x": -110,
      "y": 6.735557395310443e-15,
    },
    "width": 110,
    "x": -110,
    "y": -45,
  },
  "type": "straight-tile",
  "x": 0,
  "y": 0,
}
`;

exports[`Track fires mouseleave 2`] = `
{
  "angle": 90,
  "direction": "right",
  "event": MouseEvent {
    "isTrusted": false,
  },
  "id": "id-1",
  "model": CurvedTileModel {
    "direction": "right",
    "id": "id-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "ratio": 1,
  "rect": {
    "height": 100,
    "input": {
      "angle": 90,
      "x": -110,
      "y": 6.735557395310443e-15,
    },
    "output": {
      "angle": 180,
      "x": -165,
      "y": -54.99999999999999,
    },
    "width": 100,
    "x": -210,
    "y": -54.99999999999999,
  },
  "type": "curved-tile",
  "x": -110,
  "y": 6.735557395310443e-15,
}
`;

exports[`Track fires mouseleave 3`] = `
{
  "angle": 180,
  "direction": "right",
  "event": MouseEvent {
    "isTrusted": false,
  },
  "id": "id-2",
  "model": CurvedTileEnlargedModel {
    "direction": "right",
    "id": "id-2",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "ratio": 1,
  "rect": {
    "height": 100.00000000000001,
    "input": {
      "angle": 180,
      "x": -165,
      "y": -54.99999999999999,
    },
    "output": {
      "angle": 270,
      "x": -110,
      "y": -110,
    },
    "width": 100,
    "x": -210,
    "y": -155,
  },
  "type": "curved-tile-enlarged",
  "x": -165,
  "y": -54.99999999999999,
}
`;

exports[`Track renders with default values 1`] = `
<body>
  <div>
    <svg
      viewBox="-220 -175 230 240"
      x="0"
      y="0"
    >
      <defs>
        
        <g
          class="tile straight-tile"
          id="id-3-straight-tile-1"
          transform=""
        >
          <rect
            fill="var(--color-ground)"
            height="110"
            stroke="var(--color-separator)"
            stroke-width="var(--stroke-width-tile)"
            width="90"
            x="-45"
            y="0"
          />
          <g
            class="barrier straight-barrier"
          >
            
            <rect
              fill="var(--color-even)"
              height="27.5"
              width="5"
              x="-45"
              y="0"
            />
            
            <rect
              fill="var(--color-odd)"
              height="27.5"
              width="5"
              x="-45"
              y="27.5"
            />
            
            <rect
              fill="var(--color-even)"
              height="27.5"
              width="5"
              x="-45"
              y="55"
            />
            
            <rect
              fill="var(--color-odd)"
              height="27.5"
              width="5"
              x="-45"
              y="82.5"
            />
          </g>
          <g
            class="barrier straight-barrier"
          >
            
            <rect
              fill="var(--color-odd)"
              height="27.5"
              width="5"
              x="40"
              y="0"
            />
            
            <rect
              fill="var(--color-even)"
              height="27.5"
              width="5"
              x="40"
              y="27.5"
            />
            
            <rect
              fill="var(--color-odd)"
              height="27.5"
              width="5"
              x="40"
              y="55"
            />
            
            <rect
              fill="var(--color-even)"
              height="27.5"
              width="5"
              x="40"
              y="82.5"
            />
          </g>
        </g>
        
        
        <g
          class="tile curved-tile-enlarged"
          id="id-3-curved-tile-enlarged-1"
          transform=""
        >
          <path
            d="M -45 0 A 10 10 0 0 1 -55 10 L -55 100 L 0 100 A 45 45 0 0 0 45 55 L 45 0 Z"
            fill="var(--color-ground)"
            stroke="var(--color-separator)"
            stroke-width="var(--stroke-width-tile)"
          />
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M -45 0 A 10 10 0 0 1 -47.928932188134524 7.071067811865475 L -44.39339828220179 10.606601717798211 A 15 15 0 0 0 -40 0 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M -47.928932188134524 7.071067811865475 A 10 10 0 0 1 -55 10 L -55 15 A 15 15 0 0 0 -44.39339828220179 10.606601717798211 Z"
              fill="var(--color-odd)"
            />
          </g>
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M 40 55 A 40 40 0 0 1 28.284271247461902 83.2842712474619 L 31.81980515339464 86.81980515339464 A 45 45 0 0 0 45 55 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 28.284271247461902 83.2842712474619 A 40 40 0 0 1 2.4492935982947065e-15 95 L 2.7554552980815448e-15 100 A 45 45 0 0 0 31.81980515339464 86.81980515339464 Z"
              fill="var(--color-even)"
            />
          </g>
          <g
            class="barrier straight-barrier"
          >
            
            <rect
              fill="var(--color-even)"
              height="5"
              width="27.5"
              x="-55"
              y="95"
            />
            
            <rect
              fill="var(--color-odd)"
              height="5"
              width="27.5"
              x="-27.5"
              y="95"
            />
          </g>
          <g
            class="barrier straight-barrier"
          >
            
            <rect
              fill="var(--color-odd)"
              height="27.5"
              width="5"
              x="40"
              y="0"
            />
            
            <rect
              fill="var(--color-even)"
              height="27.5"
              width="5"
              x="40"
              y="27.5"
            />
          </g>
        </g>
        
        
        <g
          class="tile curved-tile"
          id="id-3-curved-tile-1"
          transform=""
        >
          <path
            d="M -45 0 A 10 10 0 0 1 -55 10 L -54.99999999999999 100 A 100 100 0 0 0 45 0 Z"
            fill="var(--color-ground)"
            stroke="var(--color-separator)"
            stroke-width="var(--stroke-width-tile)"
          />
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M -45 0 A 10 10 0 0 1 -47.928932188134524 7.071067811865475 L -44.39339828220179 10.606601717798211 A 15 15 0 0 0 -40 0 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M -47.928932188134524 7.071067811865475 A 10 10 0 0 1 -55 10 L -55 15 A 15 15 0 0 0 -44.39339828220179 10.606601717798211 Z"
              fill="var(--color-odd)"
            />
          </g>
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M 40 0 A 95 95 0 0 1 32.76855558857224 36.354926074683526 L 37.38795325112868 38.268343236508976 A 100 100 0 0 0 45 0 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 32.76855558857224 36.354926074683526 A 95 95 0 0 1 12.175144212722017 67.175144212722 L 15.710678118654755 70.71067811865474 A 100 100 0 0 0 37.38795325112868 38.268343236508976 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M 12.175144212722017 67.175144212722 A 95 95 0 0 1 -18.645073925316467 87.76855558857224 L -16.731656763491017 92.38795325112868 A 100 100 0 0 0 15.710678118654755 70.71067811865474 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M -18.645073925316467 87.76855558857224 A 95 95 0 0 1 -54.99999999999999 95 L -54.99999999999999 100 A 100 100 0 0 0 -16.731656763491017 92.38795325112868 Z"
              fill="var(--color-even)"
            />
          </g>
        </g>
        
         
      </defs>
      
      <use
        data-id="id-0"
        href="#id-3-straight-tile-1"
        transform="rotate(90 0 0)"
        x="0"
        y="0"
      />
      <use
        data-id="id-1"
        href="#id-3-curved-tile-1"
        transform="rotate(90 -110 6.735557395310443e-15)"
        x="-110"
        y="6.735557395310443e-15"
      />
      <use
        data-id="id-2"
        href="#id-3-curved-tile-enlarged-1"
        transform="rotate(180 -165 -54.99999999999999)"
        x="-165"
        y="-54.99999999999999"
      />
       
    </svg>
    
  </div>
</body>
`;

exports[`Track renders with the given element in slots 1`] = `
<body>
  <div />
  <div>
    <svg
      viewBox="-220 -175 268.492424049175 240"
      x="0"
      y="0"
    >
      <defs>
        
        <g
          class="tile straight-tile"
          id="id-12-straight-tile-1"
          transform=""
        >
          <rect
            fill="var(--color-ground)"
            height="110"
            stroke="var(--color-separator)"
            stroke-width="var(--stroke-width-tile)"
            width="90"
            x="-45"
            y="0"
          />
          <g
            class="barrier straight-barrier"
          >
            
            <rect
              fill="var(--color-even)"
              height="27.5"
              width="5"
              x="-45"
              y="0"
            />
            
            <rect
              fill="var(--color-odd)"
              height="27.5"
              width="5"
              x="-45"
              y="27.5"
            />
            
            <rect
              fill="var(--color-even)"
              height="27.5"
              width="5"
              x="-45"
              y="55"
            />
            
            <rect
              fill="var(--color-odd)"
              height="27.5"
              width="5"
              x="-45"
              y="82.5"
            />
          </g>
          <g
            class="barrier straight-barrier"
          >
            
            <rect
              fill="var(--color-odd)"
              height="27.5"
              width="5"
              x="40"
              y="0"
            />
            
            <rect
              fill="var(--color-even)"
              height="27.5"
              width="5"
              x="40"
              y="27.5"
            />
            
            <rect
              fill="var(--color-odd)"
              height="27.5"
              width="5"
              x="40"
              y="55"
            />
            
            <rect
              fill="var(--color-even)"
              height="27.5"
              width="5"
              x="40"
              y="82.5"
            />
          </g>
        </g>
        
        
        <g
          class="tile curved-tile-enlarged"
          id="id-12-curved-tile-enlarged-1"
          transform=""
        >
          <path
            d="M -45 0 A 10 10 0 0 1 -55 10 L -55 100 L 0 100 A 45 45 0 0 0 45 55 L 45 0 Z"
            fill="var(--color-ground)"
            stroke="var(--color-separator)"
            stroke-width="var(--stroke-width-tile)"
          />
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M -45 0 A 10 10 0 0 1 -47.928932188134524 7.071067811865475 L -44.39339828220179 10.606601717798211 A 15 15 0 0 0 -40 0 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M -47.928932188134524 7.071067811865475 A 10 10 0 0 1 -55 10 L -55 15 A 15 15 0 0 0 -44.39339828220179 10.606601717798211 Z"
              fill="var(--color-odd)"
            />
          </g>
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M 40 55 A 40 40 0 0 1 28.284271247461902 83.2842712474619 L 31.81980515339464 86.81980515339464 A 45 45 0 0 0 45 55 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 28.284271247461902 83.2842712474619 A 40 40 0 0 1 2.4492935982947065e-15 95 L 2.7554552980815448e-15 100 A 45 45 0 0 0 31.81980515339464 86.81980515339464 Z"
              fill="var(--color-even)"
            />
          </g>
          <g
            class="barrier straight-barrier"
          >
            
            <rect
              fill="var(--color-even)"
              height="5"
              width="27.5"
              x="-55"
              y="95"
            />
            
            <rect
              fill="var(--color-odd)"
              height="5"
              width="27.5"
              x="-27.5"
              y="95"
            />
          </g>
          <g
            class="barrier straight-barrier"
          >
            
            <rect
              fill="var(--color-odd)"
              height="27.5"
              width="5"
              x="40"
              y="0"
            />
            
            <rect
              fill="var(--color-even)"
              height="27.5"
              width="5"
              x="40"
              y="27.5"
            />
          </g>
        </g>
        
        
        <g
          class="tile curved-tile"
          id="id-12-curved-tile-1"
          transform=""
        >
          <path
            d="M -45 0 A 10 10 0 0 1 -55 10 L -54.99999999999999 100 A 100 100 0 0 0 45 0 Z"
            fill="var(--color-ground)"
            stroke="var(--color-separator)"
            stroke-width="var(--stroke-width-tile)"
          />
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M -45 0 A 10 10 0 0 1 -47.928932188134524 7.071067811865475 L -44.39339828220179 10.606601717798211 A 15 15 0 0 0 -40 0 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M -47.928932188134524 7.071067811865475 A 10 10 0 0 1 -55 10 L -55 15 A 15 15 0 0 0 -44.39339828220179 10.606601717798211 Z"
              fill="var(--color-odd)"
            />
          </g>
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M 40 0 A 95 95 0 0 1 32.76855558857224 36.354926074683526 L 37.38795325112868 38.268343236508976 A 100 100 0 0 0 45 0 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 32.76855558857224 36.354926074683526 A 95 95 0 0 1 12.175144212722017 67.175144212722 L 15.710678118654755 70.71067811865474 A 100 100 0 0 0 37.38795325112868 38.268343236508976 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M 12.175144212722017 67.175144212722 A 95 95 0 0 1 -18.645073925316467 87.76855558857224 L -16.731656763491017 92.38795325112868 A 100 100 0 0 0 15.710678118654755 70.71067811865474 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M -18.645073925316467 87.76855558857224 A 95 95 0 0 1 -54.99999999999999 95 L -54.99999999999999 100 A 100 100 0 0 0 -16.731656763491017 92.38795325112868 Z"
              fill="var(--color-even)"
            />
          </g>
        </g>
        
        
        <g
          class="tile curved-tile"
          id="id-12-curved-tile-2"
          transform=""
        >
          <path
            d="M -45 0 A 120 120 0 0 1 -80.1471862576143 84.85281374238569 L -16.507575950825014 148.49242404917496 A 210 210 0 0 0 45 0 Z"
            fill="var(--color-ground)"
            stroke="var(--color-separator)"
            stroke-width="var(--stroke-width-tile)"
          />
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M -45 0 A 120 120 0 0 1 -47.30576635161235 23.41083864193539 L -42.401839949596194 24.386290252016032 A 125 125 0 0 0 -40 0 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M -47.30576635161235 23.41083864193539 A 120 120 0 0 1 -54.134456098645586 45.922011883810775 L -49.51505843608916 47.835429045636225 A 125 125 0 0 0 -42.401839949596194 24.386290252016032 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M -54.134456098645586 45.922011883810775 A 120 120 0 0 1 -65.22364652369457 66.66842796235227 L -61.06629846218185 69.44627912745027 A 125 125 0 0 0 -49.51505843608916 47.835429045636225 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M -65.22364652369457 66.66842796235227 A 120 120 0 0 1 -80.1471862576143 84.85281374238569 L -76.61165235168156 88.38834764831843 A 125 125 0 0 0 -61.06629846218185 69.44627912745027 Z"
              fill="var(--color-odd)"
            />
          </g>
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M 40 0 A 205 205 0 0 1 36.06098248266224 39.99351601330629 L 40.96490888467838 40.96896762338693 A 210 210 0 0 0 45 0 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 36.06098248266224 39.99351601330629 A 205 205 0 0 1 24.39530416481378 78.4501036348434 L 29.014701827370203 80.36352079666885 A 210 210 0 0 0 40.96490888467838 40.96896762338693 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M 24.39530416481378 78.4501036348434 A 205 205 0 0 1 5.451270522021787 113.89189776901844 L 9.608618583534508 116.66974893411646 A 210 210 0 0 0 29.014701827370203 80.36352079666885 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 5.451270522021787 113.89189776901844 A 205 205 0 0 1 -20.043109856757752 144.95689014324222 L -16.507575950825014 148.49242404917496 A 210 210 0 0 0 9.608618583534508 116.66974893411646 Z"
              fill="var(--color-even)"
            />
          </g>
        </g>
        
         
        <circle
          cx="10"
          cy="10"
          id="circle"
          r="10"
          slot="defs"
        />
      </defs>
      
      <use
        data-id="id-0"
        href="#id-12-straight-tile-1"
        transform="rotate(90 0 0)"
        x="0"
        y="0"
      />
      <use
        data-id="id-1"
        href="#id-12-curved-tile-1"
        transform="rotate(90 -110 6.735557395310443e-15)"
        x="-110"
        y="6.735557395310443e-15"
      />
      <use
        data-id="id-2"
        href="#id-12-curved-tile-enlarged-1"
        transform="rotate(180 -165 -54.99999999999999)"
        x="-165"
        y="-54.99999999999999"
      />
      <use
        data-id="id-7"
        href="#id-12-curved-tile-2"
        transform="rotate(270 -110 -110)"
        x="-110"
        y="-110"
      />
       
      <rect
        height="50"
        width="100"
        x="10"
        y="10"
      />
    </svg>
    
    
  </div>
</body>
`;

exports[`Track renders with the given parameters 1`] = `
<body>
  <div>
    <svg
      height="400"
      viewBox="-220 -175 230 240"
      width="400"
      x="100"
      y="200"
    >
      <defs>
        
        <g
          class="tile straight-tile"
          id="id-4-straight-tile-1"
          transform=""
        >
          <rect
            fill="var(--color-ground)"
            height="110"
            stroke="var(--color-separator)"
            stroke-width="var(--stroke-width-tile)"
            width="90"
            x="-45"
            y="0"
          />
          <g
            class="barrier straight-barrier"
          >
            
            <rect
              fill="var(--color-even)"
              height="27.5"
              width="5"
              x="-45"
              y="0"
            />
            
            <rect
              fill="var(--color-odd)"
              height="27.5"
              width="5"
              x="-45"
              y="27.5"
            />
            
            <rect
              fill="var(--color-even)"
              height="27.5"
              width="5"
              x="-45"
              y="55"
            />
            
            <rect
              fill="var(--color-odd)"
              height="27.5"
              width="5"
              x="-45"
              y="82.5"
            />
          </g>
          <g
            class="barrier straight-barrier"
          >
            
            <rect
              fill="var(--color-odd)"
              height="27.5"
              width="5"
              x="40"
              y="0"
            />
            
            <rect
              fill="var(--color-even)"
              height="27.5"
              width="5"
              x="40"
              y="27.5"
            />
            
            <rect
              fill="var(--color-odd)"
              height="27.5"
              width="5"
              x="40"
              y="55"
            />
            
            <rect
              fill="var(--color-even)"
              height="27.5"
              width="5"
              x="40"
              y="82.5"
            />
          </g>
        </g>
        
        
        <g
          class="tile curved-tile-enlarged"
          id="id-4-curved-tile-enlarged-1"
          transform=""
        >
          <path
            d="M -45 0 A 10 10 0 0 1 -55 10 L -55 100 L 0 100 A 45 45 0 0 0 45 55 L 45 0 Z"
            fill="var(--color-ground)"
            stroke="var(--color-separator)"
            stroke-width="var(--stroke-width-tile)"
          />
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M -45 0 A 10 10 0 0 1 -47.928932188134524 7.071067811865475 L -44.39339828220179 10.606601717798211 A 15 15 0 0 0 -40 0 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M -47.928932188134524 7.071067811865475 A 10 10 0 0 1 -55 10 L -55 15 A 15 15 0 0 0 -44.39339828220179 10.606601717798211 Z"
              fill="var(--color-odd)"
            />
          </g>
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M 40 55 A 40 40 0 0 1 28.284271247461902 83.2842712474619 L 31.81980515339464 86.81980515339464 A 45 45 0 0 0 45 55 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 28.284271247461902 83.2842712474619 A 40 40 0 0 1 2.4492935982947065e-15 95 L 2.7554552980815448e-15 100 A 45 45 0 0 0 31.81980515339464 86.81980515339464 Z"
              fill="var(--color-even)"
            />
          </g>
          <g
            class="barrier straight-barrier"
          >
            
            <rect
              fill="var(--color-even)"
              height="5"
              width="27.5"
              x="-55"
              y="95"
            />
            
            <rect
              fill="var(--color-odd)"
              height="5"
              width="27.5"
              x="-27.5"
              y="95"
            />
          </g>
          <g
            class="barrier straight-barrier"
          >
            
            <rect
              fill="var(--color-odd)"
              height="27.5"
              width="5"
              x="40"
              y="0"
            />
            
            <rect
              fill="var(--color-even)"
              height="27.5"
              width="5"
              x="40"
              y="27.5"
            />
          </g>
        </g>
        
        
        <g
          class="tile curved-tile"
          id="id-4-curved-tile-1"
          transform=""
        >
          <path
            d="M -45 0 A 10 10 0 0 1 -55 10 L -54.99999999999999 100 A 100 100 0 0 0 45 0 Z"
            fill="var(--color-ground)"
            stroke="var(--color-separator)"
            stroke-width="var(--stroke-width-tile)"
          />
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M -45 0 A 10 10 0 0 1 -47.928932188134524 7.071067811865475 L -44.39339828220179 10.606601717798211 A 15 15 0 0 0 -40 0 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M -47.928932188134524 7.071067811865475 A 10 10 0 0 1 -55 10 L -55 15 A 15 15 0 0 0 -44.39339828220179 10.606601717798211 Z"
              fill="var(--color-odd)"
            />
          </g>
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M 40 0 A 95 95 0 0 1 32.76855558857224 36.354926074683526 L 37.38795325112868 38.268343236508976 A 100 100 0 0 0 45 0 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 32.76855558857224 36.354926074683526 A 95 95 0 0 1 12.175144212722017 67.175144212722 L 15.710678118654755 70.71067811865474 A 100 100 0 0 0 37.38795325112868 38.268343236508976 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M 12.175144212722017 67.175144212722 A 95 95 0 0 1 -18.645073925316467 87.76855558857224 L -16.731656763491017 92.38795325112868 A 100 100 0 0 0 15.710678118654755 70.71067811865474 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M -18.645073925316467 87.76855558857224 A 95 95 0 0 1 -54.99999999999999 95 L -54.99999999999999 100 A 100 100 0 0 0 -16.731656763491017 92.38795325112868 Z"
              fill="var(--color-even)"
            />
          </g>
        </g>
        
         
      </defs>
      
      <use
        data-id="id-0"
        href="#id-4-straight-tile-1"
        transform="rotate(90 0 0)"
        x="0"
        y="0"
      />
      <use
        data-id="id-1"
        href="#id-4-curved-tile-1"
        transform="rotate(90 -110 6.735557395310443e-15)"
        x="-110"
        y="6.735557395310443e-15"
      />
      <use
        data-id="id-2"
        href="#id-4-curved-tile-enlarged-1"
        transform="rotate(180 -165 -54.99999999999999)"
        x="-165"
        y="-54.99999999999999"
      />
       
    </svg>
    
  </div>
</body>
`;

exports[`Track updates when the model is modified 1`] = `
<body>
  <div>
    <svg
      height="400"
      viewBox="-220 -175 268.492424049175 240"
      width="400"
      x="100"
      y="200"
    >
      <defs>
        
        <g
          class="tile straight-tile"
          id="id-5-straight-tile-1"
          transform=""
        >
          <rect
            fill="var(--color-ground)"
            height="110"
            stroke="var(--color-separator)"
            stroke-width="var(--stroke-width-tile)"
            width="90"
            x="-45"
            y="0"
          />
          <g
            class="barrier straight-barrier"
          >
            
            <rect
              fill="var(--color-even)"
              height="27.5"
              width="5"
              x="-45"
              y="0"
            />
            
            <rect
              fill="var(--color-odd)"
              height="27.5"
              width="5"
              x="-45"
              y="27.5"
            />
            
            <rect
              fill="var(--color-even)"
              height="27.5"
              width="5"
              x="-45"
              y="55"
            />
            
            <rect
              fill="var(--color-odd)"
              height="27.5"
              width="5"
              x="-45"
              y="82.5"
            />
          </g>
          <g
            class="barrier straight-barrier"
          >
            
            <rect
              fill="var(--color-odd)"
              height="27.5"
              width="5"
              x="40"
              y="0"
            />
            
            <rect
              fill="var(--color-even)"
              height="27.5"
              width="5"
              x="40"
              y="27.5"
            />
            
            <rect
              fill="var(--color-odd)"
              height="27.5"
              width="5"
              x="40"
              y="55"
            />
            
            <rect
              fill="var(--color-even)"
              height="27.5"
              width="5"
              x="40"
              y="82.5"
            />
          </g>
        </g>
        
        
        <g
          class="tile curved-tile-enlarged"
          id="id-5-curved-tile-enlarged-1"
          transform=""
        >
          <path
            d="M -45 0 A 10 10 0 0 1 -55 10 L -55 100 L 0 100 A 45 45 0 0 0 45 55 L 45 0 Z"
            fill="var(--color-ground)"
            stroke="var(--color-separator)"
            stroke-width="var(--stroke-width-tile)"
          />
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M -45 0 A 10 10 0 0 1 -47.928932188134524 7.071067811865475 L -44.39339828220179 10.606601717798211 A 15 15 0 0 0 -40 0 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M -47.928932188134524 7.071067811865475 A 10 10 0 0 1 -55 10 L -55 15 A 15 15 0 0 0 -44.39339828220179 10.606601717798211 Z"
              fill="var(--color-odd)"
            />
          </g>
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M 40 55 A 40 40 0 0 1 28.284271247461902 83.2842712474619 L 31.81980515339464 86.81980515339464 A 45 45 0 0 0 45 55 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 28.284271247461902 83.2842712474619 A 40 40 0 0 1 2.4492935982947065e-15 95 L 2.7554552980815448e-15 100 A 45 45 0 0 0 31.81980515339464 86.81980515339464 Z"
              fill="var(--color-even)"
            />
          </g>
          <g
            class="barrier straight-barrier"
          >
            
            <rect
              fill="var(--color-even)"
              height="5"
              width="27.5"
              x="-55"
              y="95"
            />
            
            <rect
              fill="var(--color-odd)"
              height="5"
              width="27.5"
              x="-27.5"
              y="95"
            />
          </g>
          <g
            class="barrier straight-barrier"
          >
            
            <rect
              fill="var(--color-odd)"
              height="27.5"
              width="5"
              x="40"
              y="0"
            />
            
            <rect
              fill="var(--color-even)"
              height="27.5"
              width="5"
              x="40"
              y="27.5"
            />
          </g>
        </g>
        
        
        <g
          class="tile curved-tile"
          id="id-5-curved-tile-1"
          transform=""
        >
          <path
            d="M -45 0 A 10 10 0 0 1 -55 10 L -54.99999999999999 100 A 100 100 0 0 0 45 0 Z"
            fill="var(--color-ground)"
            stroke="var(--color-separator)"
            stroke-width="var(--stroke-width-tile)"
          />
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M -45 0 A 10 10 0 0 1 -47.928932188134524 7.071067811865475 L -44.39339828220179 10.606601717798211 A 15 15 0 0 0 -40 0 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M -47.928932188134524 7.071067811865475 A 10 10 0 0 1 -55 10 L -55 15 A 15 15 0 0 0 -44.39339828220179 10.606601717798211 Z"
              fill="var(--color-odd)"
            />
          </g>
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M 40 0 A 95 95 0 0 1 32.76855558857224 36.354926074683526 L 37.38795325112868 38.268343236508976 A 100 100 0 0 0 45 0 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 32.76855558857224 36.354926074683526 A 95 95 0 0 1 12.175144212722017 67.175144212722 L 15.710678118654755 70.71067811865474 A 100 100 0 0 0 37.38795325112868 38.268343236508976 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M 12.175144212722017 67.175144212722 A 95 95 0 0 1 -18.645073925316467 87.76855558857224 L -16.731656763491017 92.38795325112868 A 100 100 0 0 0 15.710678118654755 70.71067811865474 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M -18.645073925316467 87.76855558857224 A 95 95 0 0 1 -54.99999999999999 95 L -54.99999999999999 100 A 100 100 0 0 0 -16.731656763491017 92.38795325112868 Z"
              fill="var(--color-even)"
            />
          </g>
        </g>
        
        
        <g
          class="tile curved-tile"
          id="id-5-curved-tile-2"
          transform=""
        >
          <path
            d="M -45 0 A 120 120 0 0 1 -80.1471862576143 84.85281374238569 L -16.507575950825014 148.49242404917496 A 210 210 0 0 0 45 0 Z"
            fill="var(--color-ground)"
            stroke="var(--color-separator)"
            stroke-width="var(--stroke-width-tile)"
          />
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M -45 0 A 120 120 0 0 1 -47.30576635161235 23.41083864193539 L -42.401839949596194 24.386290252016032 A 125 125 0 0 0 -40 0 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M -47.30576635161235 23.41083864193539 A 120 120 0 0 1 -54.134456098645586 45.922011883810775 L -49.51505843608916 47.835429045636225 A 125 125 0 0 0 -42.401839949596194 24.386290252016032 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M -54.134456098645586 45.922011883810775 A 120 120 0 0 1 -65.22364652369457 66.66842796235227 L -61.06629846218185 69.44627912745027 A 125 125 0 0 0 -49.51505843608916 47.835429045636225 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M -65.22364652369457 66.66842796235227 A 120 120 0 0 1 -80.1471862576143 84.85281374238569 L -76.61165235168156 88.38834764831843 A 125 125 0 0 0 -61.06629846218185 69.44627912745027 Z"
              fill="var(--color-odd)"
            />
          </g>
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M 40 0 A 205 205 0 0 1 36.06098248266224 39.99351601330629 L 40.96490888467838 40.96896762338693 A 210 210 0 0 0 45 0 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 36.06098248266224 39.99351601330629 A 205 205 0 0 1 24.39530416481378 78.4501036348434 L 29.014701827370203 80.36352079666885 A 210 210 0 0 0 40.96490888467838 40.96896762338693 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M 24.39530416481378 78.4501036348434 A 205 205 0 0 1 5.451270522021787 113.89189776901844 L 9.608618583534508 116.66974893411646 A 210 210 0 0 0 29.014701827370203 80.36352079666885 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 5.451270522021787 113.89189776901844 A 205 205 0 0 1 -20.043109856757752 144.95689014324222 L -16.507575950825014 148.49242404917496 A 210 210 0 0 0 9.608618583534508 116.66974893411646 Z"
              fill="var(--color-even)"
            />
          </g>
        </g>
        
         
      </defs>
      
      <use
        data-id="id-0"
        href="#id-5-straight-tile-1"
        transform="rotate(90 0 0)"
        x="0"
        y="0"
      />
      <use
        data-id="id-1"
        href="#id-5-curved-tile-1"
        transform="rotate(90 -110 6.735557395310443e-15)"
        x="-110"
        y="6.735557395310443e-15"
      />
      <use
        data-id="id-2"
        href="#id-5-curved-tile-enlarged-1"
        transform="rotate(180 -165 -54.99999999999999)"
        x="-165"
        y="-54.99999999999999"
      />
      <use
        data-id="id-7"
        href="#id-5-curved-tile-2"
        transform="rotate(270 -110 -110)"
        x="-110"
        y="-110"
      />
       
    </svg>
    
  </div>
</body>
`;
